[workspace]
members = [
    "common",
    "eosio.cpu",
    "eosio.evm",
    "eosio.ibc",
    "antelope.oracles",
    "eosio.token",
    "eosmechanics",
    "accounts",
    "params",
    "atomicmarket",
    "pomelo",
    "erc721",
    "pomelo.bounties",
    "gems.blend",
    "deferred",
    "antelope.trxstats",
    "bitcoin.ordinals",
    "sx.stats",
    "blocks",
]

[workspace.dependencies]
prost = "0.11"
prost-types = "0.11"
substreams = "0.5"
substreams-antelope = "0.1"
substreams-ethereum = "0.9"
substreams-bitcoin = "1"
substreams-sink-kv = "0.1.2"
substreams-sink-prometheus = "0.1"
substreams-sink-winston = "0.1"
substreams-database-change = "1.3.0"
substreams-entity-change = "1.3.0"
antelope = "0.1.5"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
