[package]
name = "accounts"
version = "0.1.0"
authors = ["Yaro <yaro@pinax.network>"]
description = "Antelope [eosio.ibc] Substream"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[badges]
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["cdylib"]

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
substreams = { workspace = true }
substreams-antelope = { workspace = true }
substreams-sink-kv = { workspace = true }
serde_json = "1.0.91"
serde = { version = "1.0", features = ["derive"] }