[package]
name = "accounts"
version = "0.3.2"
authors = ["Yaro <yaro@pinax.network>", "Denis <denis@pinax.network>"]
description = "Antelope newly created accounts"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[badges]
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["cdylib"]

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
substreams = { workspace = true }
substreams-antelope = { workspace = true }
substreams-sink-kv = { workspace = true }
substreams-sink-prometheus = { workspace = true }
serde_json = "1.0.91"
serde = { version = "1.0", features = ["derive"] }