[package]
name = "atomicmarket"
version = "0.1.0"
authors = ["Denis <denis@pinax.network>"]
description = "Metrics for AtomicHub Market"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[badges]
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
antelope = "0.0.11"
substreams = { workspace = true }
substreams-antelope = { workspace = true }
substreams-sink-prometheus = { workspace = true }
