[package]
name = "bitcoin_ordinals"
version = "0.1.0"
authors = ["Yaro <yaro@pinax.network>"]
description = "Bitcoin Ordinals"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[badges]
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams-bitcoin = { workspace = true }
substreams = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
bitcoin = { version = "0.30.1", default-features = false, features = ["std"] }
http = "0.2.6"
hex = "0.4.3"
# ord = "0.13.1"
