[package]
name = "blocks"
version = "1.0.0"
authors = ["Yaro <yaro@pinax.network>"]
description = "Blocks Substream"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[badges]
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["cdylib"]

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
substreams = { workspace = true }
