[package]
name = "common"
version = "0.3.0"
authors = ["Denis <denis@pinax.network>"]
description = "Antelope Common Substream"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[badges]
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams = { workspace = true }
substreams-antelope = { workspace = true }
