[package]
name = "common"
version = "0.7.0"
authors = [
	"Denis <denis@pinax.network>",
	"Etienne <etienne@pinax.network>",
	"Kevin Heifner <heifnerk@objectcomputing.com>"
]
description = "Antelope Common Substream"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[badges]
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["cdylib"]

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
substreams = { workspace = true }
substreams-database-change = { workspace = true }
substreams-antelope = { workspace = true }
substreams-sink-kv = { workspace = true }
