[package]
name = "substreams-antelope-core"
version = "0.0.1"
description = "SDK for substreams running on antelope chains."
edition = "2021"
homepage = "https://sgithub.com/EOS-Nation/substreams-monorepo"
repository = "https://sgithub.com/EOS-Nation/substreams-monorepo"
license = "Apache-2.0"
readme = "../README.md"
keywords = [ "substreams", "antelope", "streamingfast", "firehose", "thegraph"]
categories = ["api-bindings", "external-ffi-bindings", "wasm"]
rust-version = "1.60"

[dependencies]
ethabi = "17.0"
prost = { version = "^0.11.0" }
prost-types = "^0.11.0"
substreams = "^0.5.0"
num-bigint = "0.4"
bigdecimal = "0.3"

[build-dependencies]
prost-build = "^0.11.0"

[dev-dependencies]
anyhow = "1"

# Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }
