[package]
name = "eosio_deferred"
version = "0.13.0"
authors = [
    "Yaro <yaro@pinax.network>",
]
description = "Antelope deferred transactions"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[badges]
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
antelope = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
substreams = { workspace = true }
substreams-database-change = { workspace = true }
substreams-sink-kv = { workspace = true }
substreams-antelope = { workspace = true }
