[package]
name = "eosio_token"
version = "0.4.2"
authors = ["Denis <denis@pinax.network>", "Yaro <yaro@pinax.network>"]
description = "Antelope `eosio.token` token transfers"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[badges]
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
eosio = "0.3.1"
antelope = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
substreams = { workspace = true }
substreams-database-change = { workspace = true }
substreams-sink-winston = { workspace = true }
substreams-antelope = { workspace = true }
