[package]
name = "eosmechanics"
version = "0.3.5"
authors = ["Denis <denis@pinax.network>", "Fred <fred@pinax.network>", "Charles <charles@pinax.network>"]
description = "Block Producer Benchmarks"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[badges]
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["cdylib"]

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
substreams = { workspace = true }
substreams-antelope = { workspace = true }
substreams-sink-kv = { workspace = true }
substreams-sink-prometheus = { workspace = true }
