[package]
name = "erc721"
version = "0.1.0"
edition = "2021"

[lib]
name = "erc721"
crate-type = ["cdylib"]

[dependencies]
ethabi = "18"
hex-literal = "0.3.4"
num-bigint = "0.4.3"
num-traits = "0.2.15"
prost = "0.11"
protobuf-json = "0.3.0"
substreams = { workspace = true }
substreams-database-change = { workspace = true }
substreams-entity-change = { workspace = true }
substreams-ethereum = { workspace = true }
substreams-ethereum-core = "0.9.0"


# Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
substreams-ethereum = "0.9"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"

[build]
target = "wasm32-unknown-unknown"
