[package]
name = "eth_blobs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
substreams = { workspace = true }
substreams-database-change = { workspace = true }
substreams-entity-change = { workspace = true }
substreams-ethereum = { workspace = true }
substreams-sink-kv = { workspace = true }


[build-dependencies]
substreams-ethereum = "0.9"
