[package]
name = "gems_blend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
substreams = { workspace = true }
substreams-antelope = { workspace = true }
#substreams-antelope = { path = "/Users/shkvo/github/Pinax/substreams-antelope/substreams-antelope" }
serde_json = "1.0.91"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
substreams-antelope = { workspace = true }
