[package]
name = "pomelo_bounties"
version = "0.1.0"
authors = ["Yaro <yaro@pinax.network>" ]
description = "Antelope Pomelo substreams"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[badges]
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["cdylib"]

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
substreams = { workspace = true }
substreams-antelope = { git = "https://github.com/pinax-network/substreams-antelope.git", branch = "feat/abigen" }
serde_json = "1.0.91"
serde = { version = "1.0", features = ["derive"] }