[package]
name = "sx_stats"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
substreams = { workspace = true }
substreams-antelope = { workspace = true }
serde_json = "1.0.91"
serde = { version = "1.0", features = ["derive"] }
substreams-database-change = { workspace = true }

[build-dependencies]
substreams-antelope = { workspace = true }
