[package]
name = "blocktime-meta"
version = "0.0.1"
description = "Antelope block meta keyed by timestamp"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bs58 = "0.4.0"
wasm-bindgen = "0.2.79"
prost = { version = "0.11.2" }
prost-types = "0.11.2"
hex = "0.4.3"
substreams = "0.4.0"
chrono = { version = "0.4", features = [ "std" ], default-features = false }

[build-dependencies]
prost-build = "0.11.2"
