[package]
name = "blocktime-meta"
version = "0.0.1"
description = "Antelope block meta keyed by timestamp"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.79"
prost = { version = "0.11.2" }
prost-types = "0.11.2"
substreams = "0.5.0"
substreams-antelope-core = { version = "0.0.1", path = "../../core" }

[build-dependencies]
prost-build = "0.11.2"
