[package]
name = "blocktime-meta"
version = "0.0.1"
description = "Antelope block meta keyed by timestamp"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.79"
prost = "0.11.2"
prost-types = "0.11.2"
substreams = { workspace = true }
substreams-antelope-core = { workspace = true }

[build-dependencies]
prost-build = "0.11.2"
