[package]
name = "blocktivity"
version = "0.0.1"
description = "Antelope blocktivity stats."
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.79"
prost = { version = "0.11.2" }
prost-types = "0.11.2"
substreams-database-change = "1.0.0"
substreams-entity-change = "1.0.0"
substreams = "0.5.1"
substreams-antelope-core = { workspace = true }

[build-dependencies]
prost-build = "0.11.2"
