[package]
name = "eosio_token"
version = "0.4.0"
description = "Antelope [eosio.token] Substream"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
prost = "0.11"
prost-types = "0.11"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
eosio = "0.3.1"
substreams = { workspace = true }
substreams-antelope-core = { workspace = true }
