[package]
name = "token-transfers"
version = "0.0.1"
description = "Antelope tokens created"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.79"
prost = { version = "0.11.2" }
prost-types = "0.11.2"
substreams = "0.5.0"
substreams-antelope-core = { version = "0.0.1", path = "../../core" }
serde_json = "1.0"
serde = { version = "1.0.148", features = ["derive"] }
eosio = "0.3.1"

[build-dependencies]
prost-build = "0.11.2"
